--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             font-family: "Edu VIC WA NT Beginner", cursive;
             margin: 0;
             padding: 0;
-            background: url('https://img.freepik.com/free-photo/concept-nebula-with-galaxies-deep-space-cosmos-discovery-outer-space-stars-universe_90220-1141.jpg?t=st=1723962349~exp=1723965949~hmac=713a91241b3d2c603a0682c44889d0ea3ec323077abb54e7a6117898de5679b7&w=1800') center center/cover no-repeat fixed;
+            background: url('https://i.ibb.co.com/WDdCD3d/glowing-sky-sphere-orbits-starry-galaxy-generated-by-ai.jpg') center center/cover no-repeat fixed;
             color: #fff;
             display: flex;
             flex-direction: column;
@@ -130,7 +130,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: url('https://img.freepik.com/free-photo/concept-nebula-with-galaxies-deep-space-cosmos-discovery-outer-space-stars-universe_90220-1141.jpg?t=st=1723962349~exp=1723965949~hmac=713a91241b3d2c603a0682c44889d0ea3ec323077abb54e7a6117898de5679b7&w=1800');
+            background: url('https://i.ibb.co.com/WDdCD3d/glowing-sky-sphere-orbits-starry-galaxy-generated-by-ai.jpg');
             opacity: .5;
             animation: 100s linear infinite stars;
             z-index: -1
